--- a/ProyectoIntegrador_IbanezCarlos/src/app/app.component.html
+++ b/ProyectoIntegrador_IbanezCarlos/src/app/app.component.html
@@ -2,3 +2,6 @@
 <app-acerca-de></app-acerca-de>
 <app-experiencia></app-experiencia>
 <app-educacion></app-educacion>
+<app-hys></app-hys>
+<app-proyect></app-proyect>
+<app-footer></app-footer>
