--- a/ProyectoIntegrador_IbanezCarlos/src/app/components/logo-ap/logo-ap.component.css
+++ b/ProyectoIntegrador_IbanezCarlos/src/app/components/logo-ap/logo-ap.component.css
@@ -1,3 +1,32 @@
+.container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.redes{
+    margin-right: 0.5em;
+}
 #logoAP{
 width: 150px;
+}
+img{
+    width: 050px;
+}
+.btm{
+    border-width: medium;
+}
+
+/* VISTA DE MOVIL*/
+@media (max-width: 575px){
+    .container{
+        flex-direction: column;
+    }
+    .redes{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .redes img{
+        margin: 0.2em;
+    }
 }
